--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@
 }
 
 .bg-hero {
-    background: url(../img/carousel-1.jpg) top right no-repeat;
+    background: url(../img/3.jpg) top right no-repeat;
     background-size: cover;
 }
 
